tests/baselines/reference/parserComputedPropertyName5.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts(1,22): error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts(1,23): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName5.ts (2 errors) ====
    var v = { public get [e]() { } };
                         ~~~
!!! error TS2378: A 'get' accessor must return a value or consist of a single 'throw' statement.
                          ~
!!! error TS2304: Cannot find name 'e'.